--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ant-design-vue": "^2.0.0-beta.10",
     "core-js": "^3.6.5",
+    "reqwest": "^2.0.5",
     "vue": "^3.0.0",
     "vue-router": "^3.4.7",
     "vuex": "^4.0.0-beta.4"
