--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "ant-design-vue": "^2.0.0-beta.10",
     "core-js": "^3.6.5",
+    "js-cookie": "^2.2.1",
     "reqwest": "^2.0.5",
-    "vue": "^3.0.0",
-    "vue-router": "^3.4.7",
+    "vue": "^3.0.2",
+    "vue-router": "^4.0.0-rc.1",
     "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
