--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
+    "@types/node": "^14.14.6",
+    "@types/webpack-env": "^1.15.3",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -24,8 +26,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.4"
+    "node-sass": "^4.14.1"
   },
   "eslintConfig": {
     "root": true,
@@ -40,7 +41,7 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-unused-vars":"off",
+      "no-unused-vars": "off",
       "no-debugger": "off"
     }
   },
