--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "^2.0.0-beta.10",
+    "ant-design-vue": "^2.0.0-beta.12",
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
     "nprogress": "^0.2.0",
     "reqwest": "^2.0.5",
     "vue": "^3.0.2",
     "vue-router": "^4.0.0-rc.1",
-    "vuex": "^4.0.0-beta.4"
+    "vuex": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
@@ -26,7 +27,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.4"
   },
   "eslintConfig": {
     "root": true,
