--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "less": "^2.7.2",
+    "less-loader": "^7.1.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.4"
   },
