--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "^2.0.0-beta.12",
+    "ant-design-vue": "^2.0.0-rc.1",
     "core-js": "^3.6.5",
     "echarts": "^4.9.0",
     "nprogress": "^0.2.0",
