--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design-vue/use": "^0.0.1-alpha.4",
     "@antv/g2": "^4.0.15",
     "ant-design-vue": "^2.0.0-rc.1",
     "core-js": "^3.6.5",
     "nprogress": "^0.2.0",
     "reqwest": "^2.0.5",
     "vue": "^3.0.2",
+    "moment": "^2.27.0",
+    "vue-i18n": "^9.0.0-alpha.16",
     "vue-router": "^4.0.0-rc.1",
     "vuex": "^4.0.0-rc.1"
   },
