--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   "dependencies": {
     "@ant-design-vue/use": "^0.0.1-alpha.4",
     "@antv/g2": "^4.0.15",
-    "ant-design-vue": "^2.0.0-rc.1",
+    "ant-design-vue": "^2.0.0-rc.5",
     "core-js": "^3.6.5",
     "nprogress": "^0.2.0",
     "reqwest": "^2.0.5",
-    "vue": "^3.0.3",
-    "moment": "^2.27.0",
-    "vue-i18n": "^9.0.0-alpha.16",
-    "vue-router": "^4.0.0-rc.1",
-    "vuex": "^4.0.0-rc.1"
+    "vue": "^3.0.4",
+    "moment": "^2.29.1",
+    "vue-i18n": "^9.0.0-beta.13",
+    "vue-router": "^4.0.0-rc.2",
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
