--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@ant-design-vue/use": "^0.0.1-alpha.4",
     "@antv/g2": "^4.1.2",
     "ant-design-vue": "^2.0.0-rc.5",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "reqwest": "^2.0.5",
     "vue": "^3.0.4",
-    "moment": "^2.29.1",
     "vue-i18n": "^9.0.0-beta.13",
     "vue-router": "^4.0.0-rc.2",
     "vuex": "^4.0.0-rc.2"
@@ -32,6 +33,7 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^2.7.2",
     "less-loader": "^7.1.0",
+    "mockjs2": "^1.0.8",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.4"
   },
