--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0-RELEASE",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve-dev": "vue-cli-service serve",
+    "serve-prod": "vue-cli-service serve --mode production",
+    "build-dev": "vue-cli-service build",
+    "build-prod": "vue-cli-service build --mode production"
   },
   "dependencies": {
     "@ant-design-vue/use": "^0.0.1-alpha.4",
