--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build-prod": "vue-cli-service build --mode production"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^4.0.0",
+    "tinymce": "^5.6.2",
     "@ant-design-vue/use": "^0.0.1-alpha.4",
     "@antv/g2": "^4.1.0",
     "ant-design-vue": "^2.0.0-rc.7",
