--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "compression-webpack-plugin": "^6.1.1",
     "less": "^2.7.2",
     "less-loader": "^7.1.0",
     "mockjs2": "^1.0.8",
