--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "less-loader": "^7.1.0",
     "mockjs2": "^1.0.8",
     "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.2"
+    "sass-loader": "^10.0.2",
+    "webpackbar": "^5.0.0-3"
   },
   "eslintConfig": {
     "root": true,
