--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "tinymce": "^5.6.2",
     "@ant-design-vue/use": "^0.0.1-alpha.4",
     "@antv/g2": "^4.1.0",
-    "ant-design-vue": "^2.0.0-rc.7",
+    "ant-design-vue": "^2.0.0",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "lodash.get": "^4.4.2",
