--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "report": "vue-cli-service build --report"
   },
   "dependencies": {
-    "@tinymce/tinymce-vue": "^4.0.0",
-    "tinymce": "^5.6.2",
     "@ant-design-vue/use": "^0.0.1-alpha.4",
+    "@antv/data-set": "^0.11.8",
     "@antv/g2": "^4.1.0",
+    "@tinymce/tinymce-vue": "^4.0.0",
     "ant-design-vue": "^2.0.0",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
@@ -21,6 +21,7 @@
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
     "reqwest": "^2.0.5",
+    "tinymce": "^5.6.2",
     "vue": "^3.0.5",
     "vue-i18n": "^9.0.0-alpha.16",
     "vue-router": "^4.0.0-rc.6",
