--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "reqwest": "^2.0.5",
     "tinymce": "^5.6.2",
     "vue": "^3.0.5",
-    "vue-i18n": "^9.0.0-alpha.16",
+    "vue-i18n": "^9.0.0-rc.7",
     "vue-router": "^4.0.0-rc.6",
     "vuex": "^4.0.0-rc.2"
   },
