--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.3.5-RELEASE",
   "private": true,
   "scripts": {
-    "serve-vite": "node generate && vite",
-    "build-vite": "node generate && vite build"
+    "serve-vite": "vite",
+    "build-vite": "vite build"
   },
   "dependencies": {
     "@ant-design-vue/use": "^0.0.1-alpha.10",
     "@ant-design/icons-vue": "^6.0.1",
     "@antv/g2": "^4.1.20",
     "@tinymce/tinymce-vue": "^4.0.4",
+    "@vitejs/plugin-vue": "^1.4.0",
     "ant-design-vue": "^2.2.2",
     "antd-theme-generator": "^1.2.8",
     "axios": "^0.21.1",
@@ -28,12 +29,9 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.6",
-    "@types/webpack-env": "^1.15.3",
     "@vue/compiler-sfc": "^3.1.4",
-    "antd-theme-webpack-plugin": "^1.3.9",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
-    "compression-webpack-plugin": "^6.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.5.0",
@@ -41,8 +39,7 @@
     "mockjs2": "^1.0.8",
     "node-sass": "^6.0.0",
     "sass-loader": "^10.0.2",
-    "vite": "^2.4.4",
-    "webpackbar": "^5.0.0-3"
+    "vite": "^2.4.4"
   },
   "eslintConfig": {
     "root": true,
