--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.3.5-RELEASE",
   "private": true,
   "scripts": {
-    "serve-vite": "node generate && vite",
-    "build-vite": "node generate && vite build"
+    "serve-vite": "vite",
+    "build-vite": "vite build"
   },
   "dependencies": {
     "@ant-design-vue/use": "^0.0.1-alpha.10",
