--- a/package.json
+++ b/package.json
@@ -3,25 +3,21 @@
   "version": "1.3.5-RELEASE",
   "private": true,
   "scripts": {
-    "serve-vite": "node generate && vite",
-    "build-vite": "node generate && vite build"
+    "serve-vite": "vite",
+    "build-vite": "vite build"
   },
   "dependencies": {
     "@ant-design-vue/use": "^0.0.1-alpha.10",
     "@ant-design/icons-vue": "^6.0.1",
     "@antv/g2": "^4.1.20",
-    "@tinymce/tinymce-vue": "^4.0.4",
     "@vitejs/plugin-vue": "^1.4.0",
     "ant-design-vue": "^2.2.2",
     "antd-theme-generator": "^1.2.8",
     "axios": "^0.21.1",
-    "c-scrollbar": "^0.1.6",
     "core-js": "^3.6.5",
     "lodash.get": "^4.4.2",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
-    "reqwest": "^2.0.5",
-    "tinymce": "^5.8.1",
     "vue": "^3.1.4",
     "vue-i18n": "^9.1.6",
     "vue-router": "^4.0.10",
