--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pear-admin-ant",
-  "version": "1.3.5-RELEASE",
+  "version": "2.0.1-Release",
   "private": true,
   "scripts": {
     "serve-vite": "vite",
@@ -10,21 +10,21 @@
     "@ant-design-vue/use": "^0.0.1-alpha.10",
     "@ant-design/icons-vue": "^6.0.1",
     "@antv/g2": "^4.1.20",
-    "@vitejs/plugin-vue": "^1.4.0",
+    "@vitejs/plugin-vue": "^1.6.2",
     "ant-design-vue": "^2.2.5",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "lodash.get": "^4.4.2",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
-    "vue": "^3.2.2",
+    "vue": "^3.2.12",
     "vue-i18n": "^9.1.7",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^14.17.9",
-    "@vue/compiler-sfc": "^3.2.2",
+    "@vue/compiler-sfc": "^3.2.12",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
@@ -34,7 +34,7 @@
     "mockjs2": "^1.0.8",
     "node-sass": "^6.0.0",
     "sass-loader": "^10.0.2",
-    "vite": "^2.4.4"
+    "vite": "^2.5.8"
   },
   "eslintConfig": {
     "root": true,
