--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@vue/compiler-sfc": "^3.2.12",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^7.18.0",
     "less": "^3.5.0",
     "less-loader": "^7.1.0",
     "mockjs2": "^1.0.8",
