--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@types/node": "^14.17.9",
     "@vue/compiler-sfc": "^3.2.12",
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^7.15.8",
     "babel-plugin-import": "^1.13.3",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^7.18.0",
