--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "2.0.1-Release",
   "private": true,
   "scripts": {
-    "//": "开发预览",
     "serve": "vite",
     "build": "vite build",
     "build-prod": "vite build --mode production",
@@ -20,6 +19,7 @@
     "lodash.get": "^4.4.2",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
+    "path": "^0.12.7",
     "rollup-plugin-visualizer": "^5.5.2",
     "vue": "^3.2.12",
     "vue-i18n": "^9.1.7",
@@ -27,9 +27,10 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.15.8",
     "@types/node": "^14.17.9",
     "@vue/compiler-sfc": "^3.2.12",
-    "@babel/eslint-parser": "^7.15.8",
+    "@zougt/vite-plugin-theme-preprocessor": "^1.3.12",
     "babel-plugin-import": "^1.13.3",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^7.18.0",
