--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pear-admin-ant",
-  "version": "2.0.1-Release",
+  "version": "2.0.2",
   "private": true,
   "scripts": {
     "serve": "vite",
