--- a/package.json
+++ b/package.json
@@ -21,24 +21,26 @@
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
     "rollup-plugin-visualizer": "^5.5.2",
-    "vue": "^3.2.21",
+    "vue": "^3.2.22",
     "vue-i18n": "^9.1.7",
-    "vue-router": "^4.0.10",
+    "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.8",
+    "@babel/core":"7.11.0",
     "@types/node": "^14.17.9",
-    "@vue/compiler-sfc": "^3.2.21",
+    "@vue/compiler-sfc": "^3.2.22",
     "@zougt/vite-plugin-theme-preprocessor": "^1.3.12",
     "babel-plugin-import": "^1.13.3",
-    "eslint": "^6.8.0",
+    "eslint":"^7.5.0",
     "eslint-plugin-vue": "^7.18.0",
+    "rollup": "^2.0.0",
+    "sass": "^1.32.8",
     "less": "^3.5.0",
-    "less-loader": "^7.1.0",
     "mockjs2": "^1.0.8",
     "rollup-plugin-analyzer": "^4.0.0",
-    "vite": "^2.5.8"
+    "vite": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
