--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@ant-design/icons-vue": "^6.0.1",
     "@antv/g2": "^4.1.20",
     "@vitejs/plugin-vue": "^1.6.2",
-    "ant-design-vue": "^2.2.8",
+    "ant-design-vue": "^3.0.0-alpha.13",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "lodash.get": "^4.4.2",
@@ -21,7 +21,7 @@
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
     "rollup-plugin-visualizer": "^5.5.2",
-    "vue": "^3.2.22",
+    "vue": "^3.2.23",
     "vue-i18n": "^9.1.7",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
